--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,12 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# weight
+yolov5.pt
+
+# results
+run/*
+
+# dataset
+datasets/*
